cmake_minimum_required(VERSION 3.17)
project(PCM)
LIST(APPEND SRC_DIR model)
foreach(cur_dir ${SRC_DIR})
	file(GLOB_RECURSE SRCS ${cur_dir}/*.cpp)
	file(GLOB_RECURSE HDRS ${cur_dir}/*.h)
	file(GLOB_RECURSE HPPS ${cur_dir}/*.hpp)
	LIST(APPEND SRC_LIST ${SRCS})
	LIST(APPEND HDR_LIST ${HDRS} ${HPPS})
endforeach()
add_executable(pcm main.cpp ${SRC_LIST} ${HDR_LIST})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/model/include)